--- a/app/src/main/res/layout/activity_agregar_dispositivo.xml
+++ b/app/src/main/res/layout/activity_agregar_dispositivo.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background"
+    android:background="#3B8CDE"
     tools:context=".ti.AgregarDispositivoActivity">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textHidden"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Agregar Dispositivo"
@@ -24,7 +24,7 @@
     <LinearLayout
         android:layout_width="358dp"
         android:layout_height="600dp"
-        android:background="#E35A2E"
+        android:background="#E39B2E"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -35,7 +35,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="19dp"
+            android:layout_height="10dp"
             android:orientation="horizontal"></LinearLayout>
 
         <LinearLayout
@@ -54,8 +54,9 @@
                     android:orientation="horizontal"></LinearLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/errorNombre"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:layout_width="290dp"
+                    android:layout_width="250dp"
                     android:layout_height="wrap_content">
 
                     <com.google.android.material.textfield.TextInputEditText
@@ -73,7 +74,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="89dp"
             android:orientation="horizontal">
 
             <LinearLayout
@@ -81,19 +82,40 @@
                 android:layout_height="match_parent"
                 android:orientation="horizontal" />
 
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="4dp"
+            <LinearLayout
+                android:layout_width="268dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="Tipo"
-                android:textStyle="bold" />
+                android:orientation="vertical">
 
-            <Spinner
-                android:id="@+id/spinnerTipo"
-                android:layout_width="23dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="47dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textView3"
+                        android:layout_width="2dp"
+                        android:layout_height="39dp"
+                        android:layout_weight="1"
+                        android:text="Tipo"
+                        android:textStyle="bold" />
+
+                    <Spinner
+                        android:id="@+id/spinnerTipo"
+                        android:layout_width="23dp"
+                        android:layout_height="44dp"
+                        android:layout_weight="1" />
+                </LinearLayout>
+
+                <EditText
+                    android:id="@+id/editTextHidden"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:enabled="false"
+                    android:inputType="textPersonName" />
+
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="45dp"
@@ -119,7 +141,7 @@
 
                 <com.google.android.material.textfield.TextInputLayout
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:layout_width="290dp"
+                    android:layout_width="248dp"
                     android:layout_height="match_parent">
 
                     <com.google.android.material.textfield.TextInputEditText
@@ -151,7 +173,7 @@
 
                 <com.google.android.material.textfield.TextInputLayout
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:layout_width="match_parent"
+                    android:layout_width="248dp"
                     android:layout_height="wrap_content">
 
                     <com.google.android.material.textfield.TextInputEditText
@@ -182,7 +204,7 @@
 
                 <com.google.android.material.textfield.TextInputLayout
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:layout_width="match_parent"
+                    android:layout_width="249dp"
                     android:layout_height="match_parent">
 
                     <com.google.android.material.textfield.TextInputEditText
@@ -199,11 +221,11 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="57dp"
             android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="315dp"
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
 
@@ -214,18 +236,47 @@
 
                 <com.google.android.material.textfield.TextInputLayout
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:layout_width="match_parent"
+                    android:layout_width="81dp"
                     android:layout_height="match_parent">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/textStockA"
-                        android:layout_width="222dp"
+                        android:layout_width="81dp"
                         android:layout_height="50dp"
                         android:drawableLeft="@drawable/ic_baseline_exposure_24"
+                        android:editable="false"
+                        android:enabled="false"
                         android:hint="stock"
-                        android:inputType="textPersonName" />
+                        android:inputType="number"
+                        android:text="0" />
 
                 </com.google.android.material.textfield.TextInputLayout>
+
+                <LinearLayout
+                    android:layout_width="20dp"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"></LinearLayout>
+
+                <Button
+                    android:id="@+id/btnMasEdit"
+                    android:layout_width="24dp"
+                    android:layout_height="40dp"
+                    android:layout_weight="1"
+                    android:backgroundTint="@color/purple_700"
+                    app:icon="@android:drawable/ic_input_add" />
+
+                <LinearLayout
+                    android:layout_width="20dp"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"></LinearLayout>
+
+                <Button
+                    android:id="@+id/btnMenos"
+                    android:layout_width="23dp"
+                    android:layout_height="40dp"
+                    android:layout_weight="1"
+                    android:backgroundTint="@color/purple_700"
+                    app:icon="?attr/editTextBackground" />
             </LinearLayout>
 
         </LinearLayout>
