--- a/app/src/main/res/layout/activity_cliente_detalles_dispositivo.xml
+++ b/app/src/main/res/layout/activity_cliente_detalles_dispositivo.xml
@@ -14,10 +14,10 @@
         android:text="Solicitud de equipo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.489"
+        app:layout_constraintHorizontal_bias="0.517"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.023" />
+        app:layout_constraintVertical_bias="0.037" />
 
     <TextView
         android:id="@+id/textViewNombreDetalles"
@@ -26,10 +26,10 @@
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.626"
+        app:layout_constraintHorizontal_bias="0.719"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.088" />
+        app:layout_constraintVertical_bias="0.085" />
 
     <TextView
         android:id="@+id/textViewAtributo1"
@@ -39,7 +39,7 @@
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/textViewNombreDetalles"
-        app:layout_constraintHorizontal_bias="0.193"
+        app:layout_constraintHorizontal_bias="0.451"
         app:layout_constraintStart_toStartOf="@+id/textViewNombreDetalles"
         app:layout_constraintTop_toBottomOf="@+id/textViewNombreDetalles"
         app:layout_constraintVertical_bias="0.0" />
@@ -70,8 +70,8 @@
 
     <Spinner
         android:id="@+id/spinner"
-        android:layout_width="101dp"
-        android:layout_height="20dp"
+        android:layout_width="133dp"
+        android:layout_height="48dp"
         android:entries="@array/dias"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -97,6 +97,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="días"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.931"
@@ -205,7 +206,7 @@
         app:layout_constraintVertical_bias="0.37" />
 
     <EditText
-        android:id="@+id/editTextTextMultiLine"
+        android:id="@+id/editTextProgramas"
         android:layout_width="347dp"
         android:layout_height="59dp"
         android:ems="10"
