--- a/app/src/main/res/layout/activity_rechazo.xml
+++ b/app/src/main/res/layout/activity_rechazo.xml
@@ -93,7 +93,7 @@
                 android:orientation="horizontal">
 
                 <EditText
-                    android:id="@+id/editTextTextMultiLine2"
+                    android:id="@+id/editTextRechazo"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
