--- a/app/src/main/res/layout/activity_ubicacion.xml
+++ b/app/src/main/res/layout/activity_ubicacion.xml
@@ -76,18 +76,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
-
-                <LinearLayout
-                    android:layout_width="52dp"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal"></LinearLayout>
+                <fragment
+                    android:layout_width="match_parent"
+                    android:layout_height="400dp"
+                    android:id="@+id/map"
+                    android:name="com.google.android.gms.maps.SupportMapFragment"/>
             </LinearLayout>
         </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="21dp"
-            android:orientation="vertical"></LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -100,7 +95,6 @@
                 android:orientation="horizontal">
 
             </LinearLayout>
-
             <Button
                 android:id="@+id/btnAceptarReserva"
                 android:layout_width="123dp"
