--- a/app/src/main/res/layout/activity_lista_dispositivos.xml
+++ b/app/src/main/res/layout/activity_lista_dispositivos.xml
@@ -2,22 +2,24 @@
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout_ti"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#3B8CDE"
-    tools:context=".ti.ListaDispositivosActivity"
-    android:id="@+id/drawer_layout_ti">
+    android:background="#FFFFFF"
+    android:backgroundTint="#000000"
+    tools:context=".ti.ListaDispositivosActivity">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/background">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_margin="20dp"
-            android:gravity="center">
+            android:gravity="center"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/textView8"
@@ -34,13 +36,24 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="44dp"
+                android:layout_height="16dp"
+                android:orientation="horizontal"></LinearLayout>
+
+            <SearchView
+                android:id="@+id/searchText"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#000000"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="16dp"
                 android:orientation="horizontal"></LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerDispositivos"
                 android:layout_width="354dp"
-                android:layout_height="539dp"
+                android:layout_height="370dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.491"
@@ -50,7 +63,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="35dp"
+                android:layout_height="17dp"
                 android:orientation="horizontal"></LinearLayout>
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
