--- a/app/src/main/res/layout/activity_admin_lista_dispositivos_prestados.xml
+++ b/app/src/main/res/layout/activity_admin_lista_dispositivos_prestados.xml
@@ -26,6 +26,13 @@
                 android:textSize="30sp"
                 android:layout_margin="20dp"
                 android:textAlignment="center"/>
+
+            <SearchView
+                android:id="@+id/searchTextListaDis"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#000000" />
+
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
