--- a/app/src/main/res/layout/activity_admin_main.xml
+++ b/app/src/main/res/layout/activity_admin_main.xml
@@ -26,10 +26,16 @@
                 android:layout_margin="20dp"
                 android:textAlignment="center"/>
 
+            <SearchView
+                android:id="@+id/searchTextUsuarios"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#000000" />
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycleViewTI"
                 android:layout_width="match_parent"
-                android:layout_height="400dp"
+                android:layout_height="366dp"
                 android:layout_margin="10dp"
                 android:background="@drawable/border" />
             <LinearLayout
