--- a/app/src/main/res/layout/activity_lista_usuarios_admin.xml
+++ b/app/src/main/res/layout/activity_lista_usuarios_admin.xml
@@ -27,6 +27,12 @@
                 android:layout_margin="20dp"
                 android:textAlignment="center"/>
 
+            <SearchView
+                android:id="@+id/searchTextUsuarios2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#000000" />
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycleViewUsuarios"
                 android:layout_margin="10dp"
